# bursa-qlib

./: .gitignore  README.md  STRUCTURE_PROPOSAL.md  config.py  pyproject.toml  requirements.txt  tickers.py
alpha/factors/: combiner.py  festive_seasonality.py  fx_sensitivity.py  glc_strength.py  opr_regime.py  palm_oil_beta.py  shariah_effect.py
alpha/models/: lightgbm.yaml
alpha/qlib/: __init__.py  expressions.py  handler.py
anomaly/: knn_detector.py  scanner.py  velocity.py  zscore.py
constraints/: liquidity_threshold.py  optimiser.py  sector_caps.py  shariah_filter.py
dashboard/: app.py
data/fetch/: bnm_openapi.py  opendosm.py  yahoo_finance.py
data/validate/: validation.py
docs/: M7_QLIB_INTEGRATION.md  STRATEGIC_RETROSPECTIVE.md  VARIANT_COMPARISON.md  VARIANT_COMPARISON_2024_2025.md
models/: lightgbm_20260308_0811.txt  lightgbm_20260308_0816.txt
multi_asset/: portfolio.py
regime/: conditioned_models.py  hmm_detector.py
scripts/: 01_fetch_data.py  03_train_model.py  04_backtest.py  05_anomaly_scan.py  06_qlib_calendar.py  06_qlib_convert.py  07_qlib_train.py  08_qlib_backtest.py  09_multi_asset_backtest.py  10_dynamic_backtest.py  11_dynamic_backtest_fixed.py  compare_variants.py  run_dashboard.py
tests/: test_qlib_backtest.py  test_qlib_handler.py
