[project]
name = "bursa-qlib"
version = "0.1.0"
description = "AI-Oriented Quantitative Research Platform for Bursa Malaysia"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Peter" }
]

dependencies = [
    "yfinance>=0.2",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "hmmlearn>=0.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "streamlit>=1.28",
    "plotly>=5.18",
    "requests>=2.31",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
experimental = [
    "pyqlib>=0.9; python_version < '3.13'",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
